--- a/distribuidores.html
+++ b/distribuidores.html
@@ -109,11 +109,84 @@
         </div>
     </section>
 
+    <section class="partners-section">
+            <h2 class="partners-title">Puntos de Venta y Distribuidores Oficiales</h2>
+
+            <div class="partners-marquee">
+                <div class="partners-track">
+                
+                    <div class="partner">
+                        <img src="assets/images/partners/allers.png" alt="Allers Group">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/farmatodo.png" alt="Farmatodo">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/locatel.png" alt="Locatel">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/health-company.png" alt="Health Company">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/amanecer-medico.png" alt="Amanecer Médico">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/tecnomedica.png" alt="Tecnomédica">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/lineas-hospitalarias.png" alt="Líneas Hospitalarias">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/pepeganga.png" alt="Pepe Ganga">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/larebaja.png" alt="La Rebaja">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/colsubsidio.png" alt="Colsubsidio">
+                    </div>
+
+                    <div class="partner">
+                        <img src="assets/images/partners/allers.png" alt="">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/farmatodo.png" alt="">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/locatel.png" alt="">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/health-company.png" alt="">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/amanecer-medico.png" alt="">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/tecnomedica.png" alt="">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/lineas-hospitalarias.png" alt="">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/pepeganga.png" alt="">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/larebaja.png" alt="">
+                    </div>
+                    <div class="partner">
+                        <img src="assets/images/partners/colsubsidio.png" alt="">
+                    </div>
+
+                </div>
+            </div>
+    </section>
+
     <div id="footer-container"></div>
 
     
     <script src="assets/js/utils.js"></script>
     <script src="assets/js/language.js"></script>
+    <script src="assets/js/main.js"></script>
     <script src="assets/js/cart.js"></script>
     <script src="assets/js/productos.js"></script>
     <script src="assets/js/header.js"></script>
