--- a/producto-detalle.html
+++ b/producto-detalle.html
@@ -108,6 +108,10 @@
                     </button>
                 </div>
 
+                <div class="cod-notice" role="note" aria-label="Aviso de pago contraentrega">
+                    Pago contraentrega solo aplica en bogotá
+                </div>
+
 
 
                 <div class="product-features">
