--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                             Tutoriales completos, guías detalladas y contenido educativo premium. 
                             Aprende a usar correctamente tus equipos médicos.
                         </p>
-                        <a href="https://www.youtube.com/@homelifecol" target="_blank" class="mag-cta youtube-btn">
+                        <a href="https://www.youtube.com/@homelifecolombia2619" target="_blank" class="mag-cta youtube-btn">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
                             </svg>
@@ -469,7 +469,7 @@
                         <div class="youtube-embed-container">
                             <!-- VIDEO EMBED DE YOUTUBE - Reemplaza VIDEO_ID con el ID de tu video -->
                             <iframe 
-                                src="https://www.youtube.com/embed/dQw4w9WgXcQ?controls=1&modestbranding=1&rel=0" 
+                                src="https://www.youtube.com/embed/S5ALrMrDmCQ?si=Y8ylo34Gqg96QZcB" 
                                 title="Tutorial HomeLife" 
                                 frameborder="0" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -619,7 +619,7 @@
                     <div class="social-btn-count">12K+ seguidores</div>
                 </a>
 
-                <a href="https://www.youtube.com/@homelifecol" target="_blank" class="social-btn-large">
+                <a href="https://www.youtube.com/@homelifecolombia2619" target="_blank" class="social-btn-large">
                     <div class="social-btn-icon youtube">
                         <svg viewBox="0 0 24 24" fill="currentColor">
                             <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
